# laboratory-works

./: CMakeLists.txt  main.c
libs/data_structures/: CMakeLists.txt
libs/data_structures/matrix/: CMakeLists.txt  matrix.c  matrix.h
libs/data_structures/vector/: vector.c  vector.h  vectorVoid.c  vectorVoid.h
